third draft, done with introduction and abstract

--- a/Methods/HOBD.tex
+++ b/Methods/HOBD.tex
@@ -67,17 +67,17 @@ Jeremy Manning\par
 \newpage
 \pagenumbering{roman}
 \section{Abstract}
-Recent researches focused on analysis of brain functional connectivity---pair-wise correlation between time series of activities in different brain regions---has achieved monumental breakthroughs in improving our understanding of the human brain. Moreover, new efforts have attempted to cast functional connectivity as a dynamic process that changes from moment to moment, and revealed that  important brain dynamics information exists within these dynamic correlation structures. Thus, we hypothesize exploration of high-order functional connectivities within the brain---the correlation within correlation structures---could potentially reveal more information on the dynamics behind brain functions. To achieve this, we present the High-Order Brain Dynamics (HOBD) model, which incorporates informations from multiple orders of brain functional connectivity to gain a more comprehensive understanding of how the brain responds to controlled stimuli. The HOBD model also introduces two new methods: TimeCorr, which revolutionizes the way functional connectivity is calculated, and TimeCorr Level Up, a new scalable solution to retrieving functional connectivity at high orders. Through the lens of the the HOBD model, we discovered important patterns in how stimulus-driven brain dynamics information is represented by each level of functional connectivity, as well as how information of different orders of functional connectivity can potentially complement each other to increase the amount of information we can decode from the brain.
+Recent researches focused on analysis of brain functional connectivity---pair-wise correlation between time series of activities in different brain regions---has achieved monumental breakthroughs in improving our understanding of the human brain. Moreover, new efforts have attempted to cast functional connectivity as a dynamic process that changes from moment to moment, and have revealed that important brain dynamics information exists within these dynamic correlation structures. Thus, we hypothesize that exploration of high-order functional connectivities within the brain---the correlation structure within functional connectivities---could potentially reveal more information on the dynamics behind brain functions. To achieve this, we present the High-Order Brain Dynamics (HOBD) model, which incorporates information from multiple orders of brain functional connectivities to gain a more comprehensive understanding of how the brain responds to controlled stimuli. The HOBD model also introduces two new methods: TimeCorr, which revolutionizes the way temporal functional connectivity is calculated, and TimeCorr Level Up, a new scalable solution to retrieving functional connectivities at high orders. Through the lens of the the HOBD model, we gained a better understanding of how different levels of functional connectivities represent stimulus-driven brain dynamics information, and how functional connectivities at different orders can complement each other to provide more information on stimulus-driven brain patterns.
 
 \newpage
 \section{Acknowledgements}
-Firstly, I would like to thank my mentors Professor Jeremy Manning of the Psychological and Brain Sciences Department at Dartmouth College and Professor Qiang Liu of the Computer Science Department at Dartmouth College. Professor Manning and Professor Liu were great inspirations for me throughout this project. Their deep understanding of their respective fields and constant flow of bright ideas really expanded my understanding of what it means to love and excel at what I want to do. Professor Manning and Professor Liu provided timely guidance whenever I was in need and constantly encouraged me to try out new ideas and to reach for higher standards.
+Firstly, I would like to thank my mentors Professor Jeremy Manning of the Psychological and Brain Sciences Department at Dartmouth College and Professor Qiang Liu of the Computer Science Department at Dartmouth College. Professor Manning and Professor Liu were great inspirations for me throughout this project. Their deep understanding of their respective fields and constant flow of bright ideas really expanded my understanding of what it means to love and excel at what I want to do. Professor Manning and Professor Liu provided timely guidance whenever I was in need and constantly encouraged me to try out new ideas and reach for higher standards.
 
-Secondly, I would also like to thank Professor Hany Farid of the Computer Science Department at Dartmouth College. Professor Farid kindled my first spark of interest in computer science and pushed me to pursue graduate eduction at Dartmouth. He has been a role model for me throughout my time at Dartmouth and will always be an inspiration for me in my future pursuits in life.
+Secondly, I would like to thank Professor Hany Farid of the Computer Science Department at Dartmouth College. Professor Farid kindled my first spark of interest in Computer Science and pushed me to pursue graduate education at Dartmouth. He has been a role model for me throughout my time at Dartmouth and will always be an inspiration for me in my future pursuits in life.
 
 Thirdly, I would like to thank Andy Heusser and Kirsten Ziman in the Contextual Dynamics Laboratory in the Neuroscience Department at Dartmouth College. Andy and Kirsten played crucial roles in helping me overcome my lack of experience in neuroscience related researches. Their patient and timely assistance helped me through many difficulties at crucial stages of my research.
 
-Fourthly, I would also like to acknowledge Dilin Wang, Jun Han and Yihao Feng in the DartML lab of the Computer Science Department at Dartmouth College. Their door were always open whenever I ran into a difficult spot or had questions about my research or writing.
+Fourthly, I would like to thank Dilin Wang, Jun Han and Yihao Feng in the DartML Laboratory in the Computer Science Department at Dartmouth College. Their door were always open whenever I ran into a difficult spot or had questions about my research or writing.
 
 Finally, I must express my very profound gratitude to my parents for providing me with unfailing support and continuous encouragement throughout my years of study and through the process of researching and writing this thesis. This accomplishment would not have been possible without them. Thank you.
 
@@ -87,29 +87,29 @@ Finally, I must express my very profound gratitude to my parents for providing m
 \pagenumbering{arabic}
 
 \section{Introduction}
-Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \citep{hasson2012}? How do we learn and adapt \citep{hasson2004}\citep{hasson2005}? What do we believe or value \citep{Greene01}? How does social context affect the way we think \citep{Matthew2015}? These questions have mesmerized wise men for thousands of years, and the answers continue to evade us. For many of us, the key to understanding human behavior lies in our brain, the central hub of all of our thoughts and decision making. So, when a new technology emerged allowing us to study the brain in a quantitative manner, it opened a door of opportunity for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.
+Human beings have an insatiable desire to understand, not only the things around us, but also ourselves. Why do we behave and respond the way we do \citep{hasson2012}? How do we learn and adapt \citep{hasson2004}\citep{hasson2005}? What do we believe or value \citep{Greene01}? How does social context affect the way we think \citep{Matthew2015}? These questions have mesmerized wise men for thousands of years, but the answers continue to evade us. For many, the key to understanding human behavior lies in our brain, the central hub of all of our thoughts and decision making. So, when a new technology emerged and allowed us to study the brain in a quantitative manner, it opened a door of endless possibilities for those who possessed an aptitude for quantitative analysis and a hunger to learn more about our own identity.
 
-Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \citep{Ogawa90}. This technology then quickly popularized among Brain Science related research due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured quantitative data \citep{Logothetis01}\citep{Friston99}\citep{Friston98}. Once highly abstract brain activities are converted into signs and digits, exploring patterns in the brain simply devolves into highly intricate mathematical problems. For example, by treating each brain fMRI image as a feature vector, Machine Learning algorithms trained on a subset of the data can learn to identify cognitive patterns (e.g. which part of a movie someone is watching), and be used to extract similar patterns from held-out brain images \citep{Norman06}\citep{peterson12}\citep{peterson17}. These applications typically treat each brain image in isolation, and attempt to decode patterns of activities associated with each of several candidate brain states. However, important stimulus-driven activities in fMRI data are often obscured by noises created by non stimulus-driven neural activity \citep{peterson11}, which greatly reduces the effectiveness of any effort to analyze relevant brain activities \citep{hasson2009}. To address this issue, new branches of research have been emerging that specifically focus on the extraction of useful information from noisy brain fMRI data by conducting a time series analysis incorporating information from the entire dataset \citep{tang2017}, and one of the most fruitful directions involves analyzing functional connectivities within the brain \citep{peterson19} \citep{peterson20}.
+Functional Magnetic Resonance Imaging, often referred to as fMRI, was first discovered and applied as a brain mapping method in 1990 by Seiji Ogawa \citep{Ogawa90}. This technology then quickly popularized among Brain Science related researches due to its unprecedented low health risk to subjects and its ability to accurately translate brain activities into highly-structured quantitative data \citep{Logothetis01}\citep{Friston99}\citep{Friston98}. Once highly abstract brain activities are converted into signs and digits, exploring patterns in the brain simply devolves into highly intricate mathematical problems. For example, by treating each brain fMRI image as a feature vector, Machine Learning algorithms trained on a subset of the data can learn to identify cognitive patterns (e.g. which part of a movie someone is watching), and be used to extract similar patterns from held-out brain images \citep{Norman06}\citep{peterson12}\citep{peterson17}. These applications typically treat each brain image in isolation, and attempt to decode patterns of activities associated with each of several candidate brain states. However, important stimulus-driven activities in fMRI data are often obscured by noises created by non stimulus-driven neural activities \citep{peterson11}, which greatly reduces the effectiveness of any effort to analyze relevant brain activities \citep{hasson2009}. To address this issue, new branches of research have been emerging that specifically focus on the extraction of useful information from noisy brain fMRI data by conducting a time series analysis incorporating information from the entire dataset \citep{tang2017}, and one of the most fruitful directions involves analyzing functional connectivities within the brain \citep{peterson19} \citep{peterson20}.
 
-The brain can be divided in various ways---according different rules of systemization (by functionality, organization, activity patterns, etc)---into a set of regions, and functional connectivity describes the correlation between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But the mechanics of the brain are far from random, rather, the correlation patterns our brains exhibit are highly structured. Presumably, this mirrors the complex but highly structured nature of our internal thoughts and experiences. Many past studies on functional connectivity have focused on using resting state data (images taken as participants rest in the scanner with their eyes open) to estimate a single correlation matrix for each person, which provides a rich database for mapping the relations among brain processes and their contributions to perception, action and cognition \citep{peterson9}\citep{Bassett2017}. The cognitive information of each subject was then used as identifiers to compare how the relationship between brain activity and task behavior differ or agree between subjects \citep{Turke13}\citep{Rubinov2010}\citep{peterson10}.
+The brain can be divided in various ways---according different rules of systemization (by functionality, organization, activity patterns, etc)---into a set of regions, and functional connectivity describes the correlation between the time series of activations each pair of brain regions exhibits. When we observe the brain, the neural activities can appear incredibly complex. But the mechanics of the brain are far from random, rather, the correlation patterns our brains exhibit are highly structured. Presumably, this mirrors the complex but highly structured nature of our internal thoughts and experiences. Many past studies on functional connectivity have focused on using resting state data (fMRI images taken as participants rest in the scanner with their eyes open) to estimate a single correlation matrix for each person, which provides a rich database for mapping the relations among brain processes and their contributions to perception, action and cognition \citep{peterson9}\citep{Bassett2017}. The cognitive information of each subject was then used as identifiers to compare how the relationship between brain activity and task behavior differ or agree between subjects \citep{Turke13}\citep{Rubinov2010}\citep{peterson10}.
 
-Recent research efforts have revealed that important cognitive information is also contained in the temporal correlational structure of time series brain activities \citep{davidson2016}, and as a result, approaches focusing on understanding the brain through analysis of dynamic brain functional connectivities begun to rapidly emerge \citep{Nigam2016}\citep{Hutchinson2013}. One of the most significant advancements comes from a recent paper by Uri Hasson's group, which casts functional connectivity as a dynamic process that changes from moment to moment depending on the specific experience of that moment \citep{hasson2016}. When analyzing the brain functional connectivity of one experimental subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task the subject is performing. The paper also presents the revolutionary idea of inter-subject functional correlation (ISFC) analysis, which cross-examines functionally connectivities across multiple subjects to isolate stimulus-dependent inter-regional correlations from random neural activities and non-neuronal noise. The Contextual Dynamics Lab successfully applied dynamic functional connectivity and ISFC analysis in their most recent paper on hierarchical topographic factor analysis (HTFA), and demonstrated that functional connectivity patterns and basic brain activation patterns contain partially non-overlapping information about stimulus-driven brain dynamics \citep{jeremy2017}. This discovery was the main inspiration for the high-order functional connectivity analysis in this thesis.
+Recent research efforts have revealed that important cognitive information is also contained in the temporal correlational structure of time series brain activities \citep{davidson2016}, and as a result, approaches focusing on understanding the brain through analysis of dynamic brain functional connectivities begun to rapidly emerge \citep{Nigam2016}\citep{Hutchinson2013}. One of the most significant advancements comes from a recent paper by Uri Hasson's group, which casts functional connectivity as a dynamic process that changes from moment to moment depending on the specific experience of that moment \citep{hasson2016}. When analyzing the dynamic functional connectivities of one experimental subject in isolation, one can examine how (or whether) the correlational structure of these activity patterns (across a given set of brain regions) varies according to the cognitive task the subject is performing. The paper also presents the revolutionary Inter-Subject Functional Correlation (ISFC) analysis, which cross-examines functional connectivities across multiple subjects to isolate stimulus-dependent inter-regional correlations from noises created by random neural activities. The Contextual Dynamics Lab successfully applied dynamic functional connectivity and ISFC analyses in their most recent paper on Hierarchical Topographic Factor Analysis (HTFA), and demonstrated that functional connectivity patterns and basic brain activation patterns contain partially non-overlapping information on stimulus-driven brain dynamics \citep{jeremy2017}. This discovery was the main inspiration for the high-order functional connectivity analysis in this thesis.
 
 Although functional connectivity analyses of brain data has evolved significantly \citep{olaf2005}\citep{khambhati2017}, there are still three fundamental limitations to past approaches:
 
-Firstly, \textbf{correlation matrices are not scalable.} Examining pairwise correlation in brain data containing $n$ regions (henceforth interchangeable with ``voxels") produces a correlation matrix with $n^2$ entries. When n is large (e.g. the number of brain regions in an fMRI volume), the full correlation matrix can become unwieldy for computation \citep{Rubinov2010}\citep{Betzel2017}\citep{Craddock2012}\citep{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements increase exponentially.
+Firstly, \textbf{correlation matrices are not scalable.} Examining pairwise correlations in brain data containing $n$ regions (henceforth interchangeable with ``voxels") produces a correlation matrix with $n^2$ entries. When n is large (e.g. the number of brain regions in an fMRI volume), the full correlation matrix can become unwieldy for computation \citep{Rubinov2010}\citep{Betzel2017}\citep{Craddock2012}\citep{Yeo2011}. Furthermore, if one wishes to examine higher-order patterns (e.g. how correlations between correlations change over time), the storage requirements increase exponentially.
 
-Secondly, \textbf{the sliding window approach is not well suited for the study of dynamic activity.} Many past approaches to calculating dynamic functional connectivity involve the sliding window method, where the correlation function is applied on the brain activations of time points within a window of set length to calculate the functional connectivity at the central time point. To calculate functional connectivity of following time points, the window is shift forward one time point at a time until the edge of the window reaches the end of the time series \citep{enrico2011}\citep{elena2012}. One disadvantage of the sliding window approach is that, for a time series of length $t$ and a window length of $l$, it can only retrieve the functional connectivity of $n=t-l$ time points, thereby losing information on $l$ time points. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlation of the correlation between nodes—--is impractical. In addition, due to the limitations on window length, the sliding window approach lacks the flexibility to adjust between different temporal resolutions. In many situations, sliding window implementations with insufficient window length provide only a poor approximation of the true moment-by-moment dynamic correlation patterns.
+Secondly, \textbf{the sliding window approach is not well suited for the study of dynamic activity.} Many past approaches to calculating dynamic functional connectivities use the sliding window method, where the correlation function is applied on the brain activations of time points within a window of set length to calculate the functional connectivity at the central time point. To calculate the functional connectivities of following time points, the window is shift forward one time point at a time until the edge of the window reaches the end of the time series \citep{enrico2011}\citep{elena2012}. One disadvantage of the sliding window approach is that, for a time series of length $t$ and a window length of $l$, it can only retrieve the functional connectivities of $n=t-l$ time points, thereby losing information on $l$ time points. Although many practical applications use buffers to make up for the loss, repeated application of the sliding window approach on the same dataset—--e.g. calculating the correlations of the correlations between nodes—--is impractical. In addition, due to the limitations on window length, the sliding window approach lacks the flexibility to adjust between different temporal resolutions. In many situations, sliding window implementations with insufficient window length provide only a poor approximation of the true moment-by-moment dynamic correlation patterns.
 
-Lastly, \textbf{important information may exist beyond voxel activations and their first level functional connectivity.} The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. To fully grasp the functions of a single brain region in the network, it is crucial to understand its activities in the context of the richly woven network that supports it \citep{Battiston2017}. As demonstrated by previous efforts by the Contextual Dynamics Lab, high level functional connectivities may contain non-overlapping cognitive information inaccessible by functional connectivity at lower levels \citep{jeremy2017}. For example, useful information about the brain may exist within interactions between interactions between brain regions (2nd order functional connectivity), interactions between interactions between interactions (3rd order functional connectivity), or in even higher orders of functional connectivity. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analysis.
+Lastly, \textbf{important information may exist beyond voxel activations and their first level functional connectivities.} The brain is a network of seemingly autonomous nodes that are actually intricately interconnected. To fully grasp the functions of a single brain region in the network, it is crucial to understand its activities in the context of the richly woven network that supports it \citep{Battiston2017}. As demonstrated by previous efforts by the Contextual Dynamics Lab, high level functional connectivities may contain non-overlapping cognitive information inaccessible by functional connectivities at lower levels \citep{jeremy2017}. For example, useful information about the brain may exist within interactions between interactions between brain regions (2nd order functional connectivity), interactions between interactions between interactions (3rd order functional connectivity), or in even higher orders of functional connectivity. Therefore, incorporating information from higher order dynamics could potentially improve the quality of brain analyses.
 
-Here, we present the High-Order Brain Dynamics (HOBD) model, a multilayer perspective that seeks to achieve a deeper understanding of the brain by finding new ways of representing high-order brain interactions and analyzing the dynamics behind these different ``levels" of brain interactions. To efficiently access and analyze brain dynamics at higher levels, the HOBD model revolutionizes functional connectivity calculation methods and creates a means to repeatedly ``level up" brain dynamics information---computing high level functional connectivity from low level information. These changes have notably improved correlation recovery accuracy, and significantly increased the amount of useful information we can extract from existing brain datasets.
+Here, we present the High-Order Brain Dynamics (HOBD) model, a multilayer perspective that seeks to achieve a deeper understanding of the brain by finding new ways of representing high-order brain interactions and analyzing the dynamics behind these different ``levels" of brain interactions. To efficiently access and analyze brain dynamics at higher levels, the HOBD model revolutionizes functional connectivity calculation methods and creates a means to repeatedly ``level up" brain dynamics information---computing high level functional connectivities from low level information. These changes have notably improved correlation recovery accuracy, and significantly increased the amount of useful information we can extract from existing brain fMRI datasets.
 
 Firstly, to find a more effective method to calculate temporal functional connectivity, we designed TimeCorr, an intuitive method that finds its inspiration directly from the fundamental correlation function. Like the sliding window method, TimeCorr is able to recover functional connectivity from fMRI brain images with similar if not higher accuracy. But TimeCorr goes beyond the sliding window method by (a) not requiring buffers for its calculations, thereby avoiding data loss, (b) offering extra stability by using all time points in the time series for functional connectivity calculation at every time point, (c) and providing the option to balance the locality and stability of its results through adjusting its temporal resolution parameter.
 
-To achieve the functionalities mentioned above, TimeCorr makes use of the Gaussian distribution. By attaching a Gaussian coefficient to components at each time point in the series, TimeCorr is able to allocate the amount of influence each neighboring time point has on the calculation of the correlation at the Guassian center. As the Gaussian center (highest density/coefficient) is always at the time point of interest, TimeCorr guarantees to return highly accurate approximations of the temporal ground truth. In addition, the user can choose to have more stability in the results by choosing coefficients from a Gaussian distribution with a larger variance; or higher temporal resolution and more locality by choosing coefficients from a distribution with a smaller variance.
+To achieve the functionalities mentioned above, TimeCorr makes use of the Gaussian distribution. By attaching a Gaussian coefficient to components at each time point in the time series, TimeCorr is able to allocate the amount of influence each neighboring time point has on the calculation of the correlation at the Guassian center. As the Gaussian center (highest density/coefficient) is always at the time point of interest, TimeCorr guarantees to return highly accurate approximations of the temporal ground truth. In addition, the user can choose to have more stability in the results by choosing coefficients from a Gaussian distribution with a larger variance; or higher temporal resolution and more locality by choosing coefficients from a distribution with a smaller variance.
 
-Secondly, we designed a ``level up" method that utilizes TimeCorr, Inter-Subject Functional Connectivity (ISFC) and Principle Component Analysis (PCA) to calculate higher order functional connectivity. As illustrated in Figure \ref{fig:HighOrder}, the process of leveling up involves repeatedly finding the correlation of correlation structures. Intuitively, voxels in the brain are analogous to the intersections within a 3-dimensional web: all voxels are delicately connected with each other, forming small sections that interweave into larger and larger clusters. Similarly, when we find the temporal correlation between two voxels, we gain information on how they interact with each other at that specific time point. By ``leveling up", we find the correlation between the interactions of two pairs of voxels, which gives us additional information on the dynamics of a slightly larger community (4 voxels). Following this intuition, every time a new order of functional connectivity is calculated on top of another level of functional connectivity, we are essentially retrieving information on the dynamic relationship between increasingly larger clusters, which could potentially be used to achieve a better understanding of the network dynamics inside our brains.
+Secondly, we designed a ``level up" method that utilizes TimeCorr, Inter-Subject Functional Connectivity (ISFC) and Principle Component Analysis (PCA) to calculate higher order functional connectivity. As illustrated in Figure \ref{fig:HighOrder}, the process of leveling up involves repeatedly finding the correlation of correlation structures. Intuitively, voxels in the brain are analogous to the intersections within a 3-dimensional web: all voxels are delicately connected with each other, forming small sections that interweave into larger and larger clusters. Similarly, when we find the temporal correlation between two voxels, we gain information on how they interact with each other at that specific time point. By ``leveling up", we find the correlation between the interactions of two pairs of voxels, which gives us additional information on the dynamics of a slightly larger community (4 voxels). Following this intuition, every time a new order of functional connectivity is calculated on top of another level of functional connectivity, we are essentially retrieving information on the dynamic relationship between increasingly larger clusters, which could potentially be useful for achieving a better understanding of the network dynamics inside our brains.
 
 \begin{figure}[!htb]
 \setlength{\belowcaptionskip}{15pt}
@@ -119,11 +119,11 @@ Secondly, we designed a ``level up" method that utilizes TimeCorr, Inter-Subject
 \label{fig:HighOrder}
 \end{figure}
 
-To overcome the problem of scaling and to enforce dimension uniformity between levels for inter-level analysis, we use TimeCorr to calculate higher order functional connectivity from lower level activations, and then reduce the TimeCorr results to an arbitrary number of voxels to represent the activations for the new level. As TimeCorr avoids data loss and PCA maintains an uniform number of activations after each ``level up", we are able to obtain functional connectivities up to the $10^{th}$ order while ensuring linear scaling in storage and computation. In addition, as PCA achieves dimensionality reduction by combining voxels with similar activity patterns, it only generates correlations between highly distinct regions, resulting in more informative functional connectivities. However, the cost of dimensionality reduction is that the connectivity matrices are not represented with perfect fidelity, so there will necessarily be information loss at each ``level up".
+To overcome the problem of scaling and to enforce dimension uniformity between levels for inter-level analysis, we use TimeCorr to calculate higher order functional connectivities from lower level activations, and then reduce the TimeCorr results to an arbitrary number of voxels to represent the activations for the new level. As TimeCorr avoids data loss and PCA maintains an uniform number of activations after each ``level up", we are able to obtain functional connectivities up to the $10^{th}$ order while ensuring linear scaling in storage and computation. In addition, as PCA achieves dimensionality reduction by combining voxels with similar activity patterns, the TimeCorr Level Up function only generates correlations between highly distinct regions, thus producing more informative functional connectivities. However, the cost of dimensionality reduction is that the connectivity matrices are not represented with perfect fidelity, so there will necessarily be information loss at each ``level up".
 
-As mentioned previously, we believe different orders of functional connectivity represent information on different aspects of brain dynamics. To measure the amount of information present at each level, we introduce decoding accuracy, a testing parameter that describes the proportion of time points in a subject's functional connectivity time series that have highest correlation with the same time point in the ISFC of all other subjects. Time points that share high similarity across all subjects have high probability of being stimulus-driven, therefore the decoding accuracy is a good evaluation of the average proportion of brain activities that are relevant to the stimulus. Furthermore, as we lack knowledge of the true functional connectivity structures of real fMRI datasets, the decoding analysis serves as a good alternative to assess the quality of our recovery efforts. We are interested in how decoding accuracy changes as we reach higher order functional connectivity. Although we presumed brain dynamics of different subjects would converge as we get to higher orders, resulting in increasing decoding accuracy, reality proved otherwise. This is shown and discussed in more detail in the Decoding Analysis section of our results.
+As mentioned previously, we believe different orders of functional connectivity represent information on different aspects of brain dynamics. To measure the amount of information present at each level, we introduce decoding accuracy, a testing parameter that describes the proportion of time points in a subject's functional connectivity time series that have highest correlation with the same time point in the ISFC of all other subjects. Time points that share high similarity across all subjects have high probability of being stimulus-driven, therefore the decoding accuracy is a good evaluation of the average proportion of brain activities that are relevant to the stimulus. Furthermore, as we lack knowledge of the true functional connectivity structures of real fMRI datasets, the decoding analysis also serves as a good alternative to assess the quality of our recovery efforts. We are interested in how decoding accuracy changes as we reach higher order functional connectivity. Although we presumed brain dynamics of different subjects would converge as we get to higher orders, resulting in increasing decoding accuracy, reality proved otherwise. This is shown and discussed in more detail in the Intra-Level Decoding Analysis section of our results.
 
-Finally, to carry out an in-depth evaluation of the effectiveness of the HOBD model, we also conducted the Multi-Level Mixture Analysis. This study aims to understand how the dynamic information from different levels of brain connectivity can be used in unison (weighted sum) to improve decoding capabilities of existing brain fMRI datasets. In the Multi-Level Mixture Analysis section of our results, we provide a side by side comparison that highlights the improvements achieved by our mixture model. In the process of finding the mixture model that maximizes decoding accuracy, we also analyzed the distribution of weights for each level of brain dynamics to explore their contribution to the optimal mixture model. The methods and findings will be discussed extensively in the results section.
+Finally, to carry out an in-depth evaluation of the effectiveness of the HOBD model, we also conducted the Multi-Level Mixture Analysis. This study aims to understand how the dynamic information from different levels of brain connectivity can be used in unison (weighted sum) to improve the decoding capabilities of existing brain fMRI datasets. In the Multi-Level Mixture Analysis section of our results, we provide a side by side comparison that highlights the improvements achieved by our mixture model. In the process of finding the mixture model that maximizes decoding accuracy, we also analyzed the optimal distribution of weights for each level of brain dynamics to explore their contribution to the optimal mixture model. The methods and findings will be discussed extensively in the Results section.
 
 \newpage
 \section{Model Description}
@@ -310,8 +310,8 @@ Where $Cholesky(R_n)$ represents the Cholesky decomposition of the correlation m
 To evaluate and compare the performances of TimeCorr and the sliding window method in recovering the ground truth in block correlation datasets, we used four metrics: (1) correlation with the true correlation in each block, (2) Mean Square Error (MSE) with the true correlation in each block, (3) correlation with the temporal ground truth, and (4) MSE with the temporal ground truth. The first two metrics were chosen to demonstrate how well TimeCorr and the sliding window method can distinguish the true correlation within each block from the ground truth in other blocks. The last two metrics were chosen to demonstrate the overall performance of TimeCorr and the sliding window approach in recovering the temporal ground truth, especially during abrupt correlation changes at block borders.
 
 \begin{figure}[!htb]
-\caption{Testing on 10 blocks of different correlations}
-\includegraphics[width=1\textwidth]{../figures/SyntheticTesting/10block100tCopy.png}
+\caption{Testing on ten 100-time-point blocks, each with different correlations}
+\includegraphics[width=1\textwidth]{../figures/SyntheticTesting/10block100t.png}
 \label{fig:10block100t}
 Figure Description: In the first row, solid lines show the correlation between block correlations and TimeCorr results; dotted, sliding window results. In the second row, solid lines show mean squared error(MSE) between block correlations and TimeCorr results; dotted, sliding window results. In the first two rows, the different colors represent correlation and MSE between the true correlation in each block and the recovered results. In the third row, the solid line shows correlation between temporal ground truth and TimeCorr results; dotted, sliding window results. In the fourth row, the solid line shows MSE between temporal ground truth and TimeCorr results; dotted line, sliding window results. Finally, the columns represent TimeCorr implementations with a different Gaussian variances.
 \end{figure}
